crates/sui/src/unit_tests/snapshots/sui__upgrade_compatibility__upgrade_compatibility_tests__package_no_name.snap
---
source: crates/sui/src/upgrade_compatibility/../unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(output)
---
error[ESC01006]: module missing
  ┌─ /fixtures/upgrade_errors/missing_module_toml/package_no_name/Move.toml:1:1
  │
1 │ [package]
  │ ^^^^^^^^^ Package is missing module 'identifier'
  │
  = Modules which are part package cannot be removed during an upgrade.
  = Add missing module 'identifier' back to the package.
